Changes for compatibility with Keras 2.

--- a/MLPresults/Dataset5.categorical_crossentropy.rmsprop.Dropout0.4
+++ b/MLPresults/Dataset5.categorical_crossentropy.rmsprop.Dropout0.4
@@ -50,3 +50,4 @@ HiddenLayers|CellsPerLayer|Accuracy
 4|40|0.992000000954
 4|50|0.984999997139
 4|60|0.990000000954
+HiddenLayers|CellsPerLayer|Accuracy
